# newturk

./: .gitignore  PHASE4-COMPLETION.md  README.md  TEST-RESULTS.md  docker-compose.yml
backend/: .env.example  pyproject.toml  requirements-updated.txt  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: analysis.py  execution.py  experiments.py
backend/app/models/: __init__.py  experiment.py  participant.py  response.py
backend/app/schemas/: __init__.py  analysis.py  execution.py  experiment.py
backend/app/services/: analyzer.py  llm_executor.py  participant_generator.py
backend/tests/: __init__.py  conftest.py  test_analyzer.py  test_api_deps.py  test_config.py  test_database.py  test_experiments_api.py  test_llm_executor.py  test_models.py  test_participant_generator.py  test_schemas.py
docs/plans/: 2026-02-01-phase1-mvp-implementation.md  2026-02-01-silicon-sample-simulator-design.md  2026-02-02-phase3-scale-config-implementation.md  2026-02-02-phase4-question-reordering-design.md  2026-02-02-questionnaire-editor-design.md  2026-02-02-questionnaire-editor-phase1.md  2026-02-02-questionnaire-editor-phase3-design.md  CONTEXT-FOR-PHASE4.md
frontend/: MANUAL-TEST-RESULTS.md  TESTING-CHECKLIST.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  experiments.ts
frontend/src/contexts/: SurveyEditorContext.tsx
frontend/src/lib/: batchParser.ts  scaleInterpolator.ts  scalePresets.ts
(+32 files in other folders)
